# Smart-Home-Hub

./: README.md
Firmware/SmartHomehub/: CMakeLists.txt  sdkconfig
Firmware/SmartHomehub/main/: CMakeLists.txt  images.c  images.h  main.c  screens.c  screens.h  scroll_bar.c  scroll_bar.h  ui_image_ai.c  ui_image_battery.c  ui_image_cat.c  ui_image_co2.c  ui_image_home.c  ui_image_human.c  ui_image_humidity.c  ui_image_setting.c  ui_image_tempature.c  ui_image_tvoc.c  ui_image_wifi.c  wifi_connect.c  wifi_connect.h
